@@ -4,6 +4,9 @@ repoze.who Changelog
 After 2.0a3 (unreleased)
 ------------------------
 
+- Avoid propagating unicode 'max_age' value into cookie headers.  See
+  https://bugs.launchpad.net/bugs/674123 .
+
 - Added a single-file example BFG application demonstrating the use of
   the new 'login' and 'logout' methods of the API object.
 
